# fathom-experiments

./: .envrc.example  .envrc.sample  LICENSE  README.md  dune  dune-project  flake.nix  package-lock.json  package.json
lang-bidi-combinators/: README.md  decoder.ml  decoder.mli  dune  encoder.ml  encoder.mli  format.ml  format.mli
lang-bidi-combinators/examples/: dune  image.ml  image_with_header.ml  sensor_msg.ml
lang-derivatives/: README.md  derivatives.ml  dune  option.ml  set.ml  syntax.ml  token.ml  token_set.ml
lang-derivatives/lib/: option.ml
lang-derivatives/lib/syntax/: case_tree.ml  ll1.ml  ll1_2.ml  ll1_case_tree.ml  ll1_derive.ml  ll1_derive_pre.ml  ll1_det.ml  ll1_properties.ml  ll1_record.ml  ll1_simple.ml  ll_naive.ml  peg.ml  peg_ll1.ml  peg_ll1_properties.ml  syntax.ml
lang-derivatives/syntax/: core.ml  ll.ml  ll.mli  ll1.ml  ll1.mli  rd.ml  rd.mli  syntax.ml
lang-derivatives/test/: dune  ll1.ml
lang-ll1-combinators/: LL1.ml  README.md  dune  ll1.ml
lang-ll1-combinators/test/: SExpr.ml  dune  sexpr.ml
lang-ll1-dsl/: Basis.ml  Basis.mli  Core.ml  Core.mli  Lexer.ml  Main.ml  Parser.mly  README.md  Surface.ml  Surface.mli  core.ml  core.mli  dune  lexer.ml  lexer.mli  main.ml  parser.mly  surface.ml  surface.mli
lang-ll1-dsl/docs/: core.md
lang-ll1-dsl/test/: actions.txt  ascii.txt  base.txt  comments.txt  dune  items.txt  jpeg.txt  ranges.txt  records.txt  tests.t  types.txt
lang-ll1-dsl2/: Core.ml  Lexer.ml  Main.ml  Parser.mly  Surface.ml  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml
lang-ll1-dsl2/examples/: actions.stdout  actions.txt  binary-stl.txt  dune  items.stdout  items.txt  jpeg.stdout  jpeg.txt  point.stdout  point.txt  simple-bitmap.txt  simple.stdout  simple.txt
lang-ll1-zippy/: README.md  dune  option.ml  syntax.ml
lang-llk-simple/: Main.ml  README.md  dune  main.ml
lang-narcissus/: README.md  dune  narcissus.ml
lang-simple-ddl/: Case.ml  Core.ml  Lexer.ml  Main.ml  Parser.mly  README.md  Rust.ml  Surface.ml  core.ml  decoder.ml  decoder.mli  dune  lexer.ml  main.ml  parser.mly  rust.ml  surface.ml
lang-simple-ddl/examples/: base.core.stdout  base.rs.stdout  base.stdout  base.txt  dune_inc.ml  edid.core.stdout  edid.rs.stdout  edid.txt  object-id.core.stdout  object-id.rs.stdout  object-id.txt  simple-image.core.stdout  simple-image.rs.stdout  simple-image.stdout  simple-image.txt  stl-binary.core.stdout  stl-binary.rs.stdout  stl-binary.txt
lang-simple-ddl/src/: decoder.ml  dune  lexer.ml  parser.mly  rust.ml  surface.ml
lang-simple-ddl/src/core/: compile.ml  core.ml  semantics.ml  syntax.ml  zonk.ml
lang-simple-ddl/src/surface/: elab.ml  elab.mli  surface.ml  syntax.ml
lang-simple-ddl/tests/: dune_inc.ml  format-pure.core.stdout  format-pure.rs.stdout  format-pure.txt  format-repr.core.stdout  format-repr.rs.stdout  format-repr.txt  placeholders.core.stdout  placeholders.rs.stdout  placeholders.txt  records.core.stdout  records.rs.stdout  records.stdout  records.txt
notes/references/: README.md  a-typed-algebraic-approach-to-parsing.md  daedalus-safer-document-parsing.md  doodle.md  elaboration-zoo.md  everparse.md  fathom.md  flap-a-deterministic-parser-with-fused-lexing.md  lambda-pi.md  language-garden.md  linear-time-parser-combinators.md  linear-time-parser-compinators.md  narcissus.md  the-next-700-data-languages.md  the-power-of-pi.md
opam/: bidi-combinators.opam  byte-set.opam  case-conv.opam  derivatives.opam  ll1-combinators.opam  ll1-dsl.opam  ll1-dsl2.opam  llk-simple.opam  narcissus.opam  simple-ddl.opam  sized-numbers.opam
scraps/: LL.lean  dune  packrat.ml
