opam-version: "2.0"
depends: [
  "dune" {>= "3.8"}
  "byte-set"
  "menhir" {>= "20240715" & build}
  "menhirLib" {>= "20240715"}
  "odoc" {with-doc}
  "sedlex" {>= "3.2"}
  "tsort" {>= "2.1"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
