; actions.txt

(rule
  (with-stdin-from actions.txt
    (with-stdout-to actions.stdout.tmp
      (run %{bin:ll1-dsl2}))))

(rule
  (alias runtest)
  (package ll1-dsl2)
  (action (diff actions.stdout
                actions.stdout.tmp)))


; items.txt

(rule
  (with-stdin-from items.txt
    (with-stdout-to items.stdout.tmp
      (run %{bin:ll1-dsl2}))))

(rule
  (alias runtest)
  (package ll1-dsl2)
  (action (diff items.stdout
                items.stdout.tmp)))


; jpeg.txt

(rule
  (with-stdin-from jpeg.txt
    (with-stdout-to jpeg.stdout.tmp
      (run %{bin:ll1-dsl2}))))

(rule
  (alias runtest)
  (package ll1-dsl2)
  (action (diff jpeg.stdout
                jpeg.stdout.tmp)))


; point.txt

(rule
  (with-stdin-from point.txt
    (with-stdout-to point.stdout.tmp
      (run %{bin:ll1-dsl2}))))

(rule
  (alias runtest)
  (package ll1-dsl2)
  (action (diff point.stdout
                point.stdout.tmp)))


; simple.txt

(rule
  (with-stdin-from simple.txt
    (with-stdout-to simple.stdout.tmp
      (run %{bin:ll1-dsl2}))))

(rule
  (alias runtest)
  (package ll1-dsl2)
  (action (diff simple.stdout
                simple.stdout.tmp)))
